# Shufa

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.worker  README.md  Shufa.txt  codebase.md  docker-compose.yml  pyproject.toml
.github/workflows/: secret-scan.yml
.omx/: metrics.json
.omx/logs/: notify-fallback-2026-04-03.jsonl  omx-2026-04-03.jsonl  tmux-hook-2026-04-03.jsonl  turns-2026-04-03.jsonl
.omx/state/: hud-state.json  notify-fallback-state.json  notify-hook-state.json  session.json  tmux-hook-state.json  update-check.json
backend/: __init__.py  scheduler.py
backend/api/: app.py  rate_limit.py  schemas.py
backend/auth/: service.py
backend/backtest/: advanced.py  broker.py  engine.py  metrics.py  service.py  tuning.py
backend/core/: __init__.py  config.py  logging.py  retry.py  types.py
backend/data/: __init__.py  features.py  quality.py  service.py  storage.py
backend/execution/: adapters.py  service.py
backend/ops/: alerts.py  audit.py  backup.py  (+2 more)
frontend/: index.html  package-lock.json  package.json
scripts/: bootstrap_secure_runtime.py  enable_live_approval_mode.py  scan_secrets.py  set_vault_secret.py
tests/: test_auth_and_worker.py  test_autoresearch.py  test_backtest_robustness.py  test_backtest_service.py  test_data_service.py  test_engine.py  test_execution_hmac.py  test_execution_service.py  test_ops_readiness.py  test_paper_activity.py  test_paper_runner.py  test_pipeline_flow.py  test_quality.py  test_runner_state.py  test_spec_validator.py  test_targets.py  test_vault_and_queue.py
(+105 files in other folders)
