[project]
name = "workbench"
version = "0.1.0"
description = "Local-first crypto research and paper trading workbench"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10",
  "cryptography>=43.0",
  "duckdb>=1.0",
  "fastapi>=0.111",
  "httpx>=0.27",
  "pandas>=2.2",
  "prometheus-client>=0.21",
  "pyarrow>=16",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "structlog>=24.2",
  "uvicorn[standard]>=0.30",
  "websockets>=12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "backend",
  "backend.api",
  "backend.api.routes",
  "backend.auth",
  "backend.backtest",
  "backend.core",
  "backend.data",
  "backend.data.adapters",
  "backend.data.streams",
  "backend.execution",
  "backend.ops",
  "backend.paper",
  "backend.research",
  "backend.research.agents",
  "backend.secrets",
  "backend.strategy",
  "backend.strategy.signals",
  "backend.worker",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
